# catan

./: .gitignore  Cargo.toml
agent/: Cargo.toml
agent/src/: error.rs  lib.rs
core/: Cargo.toml
core/src/: board.rs  common.rs  game.rs  lib.rs
core/src/network/: mod.rs
protocols/: Cargo.toml  build.rs
protocols/protos/: game_management.capnp  game_management.proto  game_server.capnp  player_management.capnp
protocols/src/: lib.rs
render/: Cargo.toml
render/src/: board_view.rs  colors.rs  common.rs  lib.rs
server/: Cargo.toml
server/src/: error.rs  lib.rs  server.rs  services.rs
servers/game-management-server/: Cargo.toml
servers/game-management-server/examples/: open_registration_request.rs  register_game_request.rs
servers/game-management-server/scripts/: add_player_registration_index.lua  combine_player_registration_score.lua  multiple_set_membership.lua
servers/game-management-server/src/: game_management.rs  main.rs
servers/server-common/: Cargo.toml
servers/server-common/src/: error.rs  lib.rs  redis_scripts.rs  resource_naming.rs  resp_helper.rs  uuid_generators.rs
src/: main.rs
src/catan/: board.rs  common.rs  game.rs  mod.rs
src/render/: board_view.rs  colors.rs  common.rs  mod.rs
