[package]
name = "catan"
version = "0.1.0"
authors = ["Declan Kelly <dkelly.home@gmail.com>"]
publish = false

[dependencies]
catan_agent = { path = "agent" }
catan_core = { path = "core" }
catan_render = { path = "render" }
catan_server = { path = "server" }

clap = "~2.26.2"
log = "~0.3.8"
fern = "~0.4.3"
chrono = "~0.4.0"
tempfile = "~2.2.0"
colored = "~1.5.3"
# regex = "~0.2.2"

[workspace]