[package]
name = "catan_agent"
version = "0.1.0"

[dependencies]
log = "~0.3.8"
uuid = { version = "~0.5.1", features = ["serde", "v4", "v5"] }
serde = "~1.0.15"
serde_derive = "~1.0.15"
serde_json = "~1.0.4"

# bytes = "~0.4.5"
futures = "~0.1.16"
tokio-io = "~0.1.3"
tokio-core = "~0.1.10"
tokio-timer = "~0.1.2"
tokio-proto = "~0.1.1"
tokio-service = "~0.1.0"
tokio-serde-json = { git = "https://github.com/carllerche/tokio-serde-json", rev = "592f783dda71f24a29f7cf68c558ad552c701b80" }

catan_core = { path = "../core" }
catan_server = { path = "../server" }